--- a/style/index.css
+++ b/style/index.css
@@ -44,3 +44,9 @@ html:focus-within {
         margin:0 !important; 
     }
 }
+
+body *{
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
