--- a/style/style.css
+++ b/style/style.css
@@ -537,9 +537,22 @@ video {
   margin: auto;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
 .my-\[7\%\] {
   margin-top: 7%;
   margin-bottom: 7%;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mr-10 {
@@ -599,9 +612,17 @@ video {
   width: 100%;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .flex-row {
@@ -724,12 +745,6 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -750,6 +765,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-\[103\%\]:hover {
+  --tw-scale-x: 103%;
+  --tw-scale-y: 103%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:border-b-2:hover {
   border-bottom-width: 2px;
 }
@@ -765,21 +786,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .md\:inline-block {
     display: inline-block;
   }
 
   .md\:inline {
     display: inline;
-  }
-
-  .md\:w-12 {
-    width: 3rem;
   }
 
   .md\:w-1\/2 {
@@ -792,10 +804,6 @@ video {
 
   .md\:w-1\/4 {
     width: 25%;
-  }
-
-  .md\:w-\[80\%\] {
-    width: 80%;
   }
 
   .md\:flex-col {
@@ -812,6 +820,10 @@ video {
     margin: 2.25rem;
   }
 
+  .lg\:m-0 {
+    margin: 0px;
+  }
+
   .lg\:mt-4 {
     margin-top: 1rem;
   }
@@ -826,10 +838,6 @@ video {
 
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:w-12 {
-    width: 3rem;
   }
 
   .lg\:w-5\/12 {
