--- a/style/style.css
+++ b/style/style.css
@@ -541,6 +541,10 @@ video {
   margin: 2.5rem;
 }
 
+.m-5 {
+  margin: 1.25rem;
+}
+
 .my-\[7\%\] {
   margin-top: 7%;
   margin-bottom: 7%;
@@ -608,6 +612,10 @@ video {
   height: 40%;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-full {
   width: 100%;
 }
@@ -623,6 +631,10 @@ video {
 
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .flex-row {
@@ -708,6 +720,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .align-middle {
   vertical-align: middle;
 }
@@ -735,6 +751,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-thin {
@@ -786,6 +807,11 @@ video {
 .hover\:border-blue-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.hover\:border-blue-700:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
 
 .hover\:border-gray-400:hover {
